--- a/Develop/style.css
+++ b/Develop/style.css
@@ -4,17 +4,6 @@ body {
   line-height: 1;
 }
 
-textarea{
-  background: transparent;
-  border: none;
-  resize: none;
-  color: #000000;
-  border-left: 1px solid black;
-  padding: 10px;
-  width: 100%;
-  height: 100%;
-}
-
 .jumbotron {
   text-align: center;
   background-color: transparent;
@@ -23,11 +12,20 @@ textarea{
   border-bottom: 10px solid black;
 }
 
-.description{
+textarea{
+  background: transparent;
+  border: none;
+  resize: none;
+  color: #000000;
+  border-left: 1px solid black;
+  padding: 10px;
+}
+
+.description {
   white-space: pre-wrap;
 }
 
-.time-block{
+.time-block {
   text-align: center;
   border-radius: 15px;
 }
@@ -42,6 +40,10 @@ textarea{
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  width: 15%;
+  text-align: right;
+  padding-top: 15px;
+  padding-right: 10px;
 }
 
 .past {
