--- a/Develop/style.css
+++ b/Develop/style.css
@@ -19,6 +19,7 @@ textarea{
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+  width: 77%;
 }
 
 .description {
@@ -67,6 +68,7 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  width: 8%;
 }
 
 .saveBtn i:hover {
