--- a/style.css
+++ b/style.css
@@ -16,14 +16,20 @@ body {
   margin-bottom: 10px;
 }
 
-textarea{
+textarea {
   background: transparent;
   border: none;
   resize: none;
-  color: #000000;
+  color: black;
   border-left: 1px solid black;
   padding: 10px;
   width: 77%;
+  font-weight: bold;
+}
+
+textarea:focus {
+  color: black;
+  font-weight: bold;
 }
 
 .description {
@@ -58,17 +64,20 @@ textarea{
 
 .past {
   background-color: #d3d3d3;
-  color: white;
+  color: black;
+  font-weight: bold;
 }
 
 .present {
   background-color: #ff6961;
-  color: white;
+  color: black;
+  font-weight: bold;
 }
 
 .future {
   background-color: #77dd77;
-  color: white;
+  color: black;
+  font-weight: bold;
 }
 
 .saveBtn {
